# yt-dlp-stash

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.github/: FUNDING.yml
.github/workflows/: python-publish.yml
yt_dlp_plugins/postprocessor/: stash.py
