[project]
name = "yt-dlp-stash"
version = "2.0.0"
readme = "README.md"
authors = [{ name = "Schmoaaaaah", email = "schmoaaaaah@r4nd0.com" }]
license = { file = "LICENSE" }
requires-python = ">= 3.11"
dependencies = ["yt-dlp>=2025.03.31", "stashapp-tools>=0.2.58"]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.distutils.bdist_wheel]
universal = true
